# herald

./: .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md  component_map.yaml  constraints.yaml  fly.toml  prompt.md  trust_policy.yaml
herald-cli/: Cargo.toml
herald-cli/src/: client.rs  config.rs  error.rs  handler.rs  main.rs  poller.rs  streamer.rs
herald-server/: Cargo.toml
herald-server/src/: auth.rs  billing.rs  config.rs  error.rs  main.rs  pages.rs  queue.rs
herald-server/src/routes/: agent.rs  ingest.rs  mod.rs  register.rs
src/: config.rs  crypto.rs  main.rs  state.rs
src/routes/: websocket.rs
