[package]
name = "herald-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local daemon for Herald — polls queue, invokes handlers, reports ACK/NACK"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
http = "1"
